--- a/pagina web abogados.html
+++ b/pagina web abogados.html
@@ -7,12 +7,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body { font-family: Arial, sans-serif; }
-        .hero { background: url('https://source.unsplash.com/1600x900/?law') no-repeat center center/cover; color: white; padding: 150px 0; text-align: center; }
+        .hero { 
+            background: url('https://source.unsplash.com/1600x900/?law') no-repeat center center/cover; 
+            color: white; 
+            padding: 150px 0; 
+            text-align: center; 
+        }
         .hero h1 { font-size: 3rem; font-weight: bold; }
         .hero p { font-size: 1.5rem; }
         .nav-custom { background: rgba(0, 0, 0, 0.8); padding: 15px 0; text-align: center; }
         .nav-custom a { color: white; margin: 0 15px; text-decoration: none; font-size: 1.2rem; }
         .nav-custom a:hover { text-decoration: underline; }
+        .icon { font-size: 50px; color: #0056b3; }
+        .map-container { height: 300px; }
     </style>
 </head>
 <body>
