--- a/index.html
+++ b/index.html
@@ -7,19 +7,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body { font-family: Arial, sans-serif; }
-        .hero { 
-            background: url('https://source.unsplash.com/1600x900/?law') no-repeat center center/cover; 
-            color: white; 
-            padding: 150px 0; 
-            text-align: center; 
-        }
+        .hero { background: url('https://source.unsplash.com/1600x900/?law') no-repeat center center/cover; color: white; padding: 150px 0; text-align: center; }
         .hero h1 { font-size: 3rem; font-weight: bold; }
         .hero p { font-size: 1.5rem; }
         .nav-custom { background: rgba(0, 0, 0, 0.8); padding: 15px 0; text-align: center; }
         .nav-custom a { color: white; margin: 0 15px; text-decoration: none; font-size: 1.2rem; }
         .nav-custom a:hover { text-decoration: underline; }
-        .icon { font-size: 50px; color: #0056b3; }
-        .map-container { height: 300px; }
     </style>
 </head>
 <body>
@@ -47,6 +40,11 @@
     <section class="hero">
         <h1>SILVA Y ABOGADOS</h1>
         <p>Estudio de abogados</p>
+    </section>
+    
+    <!-- Imagen sobre Servicios -->
+    <section class="container my-5 text-center">
+        <img src="https://www.univision.com/proxy/api/cached/picture?href=https%3A%2F%2Fst1.uvnimg.com%2F6e%2F57%2Fab454c374d8594e7b861069c744b%2Fabogados-getty.jpg&width=1496&height=804&ratio_width=1240&ratio_height=698&format=webp" alt="Abogados" class="img-fluid">
     </section>
     
     <!-- Servicios -->
@@ -82,3 +80,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
