--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         <img src="https://github.com/sebastiansilva19/COORPORACION-PERUANA-DE-ABOGADOS/blob/main/imagen%20tit.png?raw=true" class="img-fluid" alt="Imagen Titular">
     </section>
     
+    <!-- Segunda Imagen Adicional -->
+    <section class="container text-center my-4">
+        <img src="https://www.univision.com/proxy/api/cached/picture?href=https%3A%2F%2Fst1.uvnimg.com%2F6e%2F57%2Fab454c374d8594e7b861069c744b%2Fabogados-getty.jpg&width=1496&height=804&ratio_width=1240&ratio_height=698&format=webp" class="img-fluid" alt="Imagen Adicional">
+    </section>
+    
     <!-- Servicios -->
     <section id="servicios" class="container my-5 text-center">
         <h2>Nuestros Servicios</h2>
