--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         .nav-custom { background: rgba(0, 0, 0, 0.8); padding: 15px 0; text-align: center; }
         .nav-custom a { color: white; margin: 0 15px; text-decoration: none; font-size: 1.2rem; }
         .nav-custom a:hover { text-decoration: underline; }
+        .service-img { width: 100%; max-width: 250px; height: auto; }
     </style>
 </head>
 <body>
@@ -57,17 +58,17 @@
         <h2>Nuestros Servicios</h2>
         <div class="row">
             <div class="col-md-4">
-                <span class="icon">⚖️</span>
+                <img src="https://source.unsplash.com/300x300/?justice" class="service-img" alt="Laboral">
                 <h3>Laboral</h3>
                 <p>Asesoría en derecho laboral para empresas y trabajadores.</p>
             </div>
             <div class="col-md-4">
-                <span class="icon">📑</span>
+                <img src="https://source.unsplash.com/300x300/?tax" class="service-img" alt="Tributario">
                 <h3>Tributario</h3>
                 <p>Consultoría en materia de impuestos y regulaciones fiscales.</p>
             </div>
             <div class="col-md-4">
-                <span class="icon">🏛️</span>
+                <img src="https://source.unsplash.com/300x300/?corporate" class="service-img" alt="Corporativo">
                 <h3>Corporativo</h3>
                 <p>Asistencia legal para negocios y sociedades.</p>
             </div>
@@ -78,10 +79,11 @@
     <section id="contacto" class="container my-5">
         <h2>Ubicación</h2>
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?..." width="100%" height="300px" style="border:0;" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?" width="100%" height="300px" style="border:0;" allowfullscreen></iframe>
         </div>
     </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
