--- a/index.html
+++ b/index.html
@@ -74,5 +74,18 @@
     <section id="contacto" class="container my-5">
         <h2>Ubicación</h2>
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.044635095577!2d-77.03644382504368!
+            <iframe 
+                src="https://www.google.com/maps?q=Jr.+Bernardo+Alcedo+N°141,+Lince&output=embed" 
+                width="100%" 
+                height="300px" 
+                style="border:0;" 
+                allowfullscreen 
+                loading="lazy">
+            </iframe>
+        </div>
+    </section>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 
