--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         .nav-custom { background: rgba(0, 0, 0, 0.8); padding: 15px 0; text-align: center; }
         .nav-custom a { color: white; margin: 0 15px; text-decoration: none; font-size: 1.2rem; }
         .nav-custom a:hover { text-decoration: underline; }
-        .service-img { width: 100%; max-width: 300px; height: auto; margin-bottom: 15px; }
+        .service-img { width: 100%; max-width: 200px; height: auto; margin-bottom: 15px; } /* Imágenes más pequeñas */
     </style>
 </head>
 <body>
@@ -93,4 +93,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
