--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         .nav-custom { background: rgba(0, 0, 0, 0.8); padding: 15px 0; text-align: center; }
         .nav-custom a { color: white; margin: 0 15px; text-decoration: none; font-size: 1.2rem; }
         .nav-custom a:hover { text-decoration: underline; }
-        .service-img { width: 100%; max-width: 200px; height: auto; margin-bottom: 15px; } /* Imágenes más pequeñas */
+        .service-img { width: 80%; max-width: 180px; height: auto; margin-bottom: 15px; } /* Reducida a 180px */
     </style>
 </head>
 <body>
