--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         .nav-custom a { color: white; margin: 0 15px; text-decoration: none; font-size: 1.2rem; }
         .nav-custom a:hover { text-decoration: underline; }
         .service-img { width: 100%; max-width: 180px; height: auto; margin-bottom: 15px; }
-        .image-container { margin-top: -80px; } /* Se redujo aún más el espacio arriba de la imagen */
+        .image-container { margin-top: -130px; } /* Se redujo el espacio entre la imagen y el encabezado */
     </style>
 </head>
 <body>
