--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
             color: white; 
             padding: 100px 0; 
             text-align: center; 
-            margin-bottom: 10px; /* Se redujo el espacio debajo del encabezado */
+            margin-bottom: 10px;
         }
-        .hero h1 { font-size: 3rem; font-weight: bold; }
-        .hero p { font-size: 1.5rem; }
         .nav-custom { background: rgba(0, 0, 0, 0.8); padding: 15px 0; text-align: center; }
         .nav-custom a { color: white; margin: 0 15px; text-decoration: none; font-size: 1.2rem; }
         .nav-custom a:hover { text-decoration: underline; }
         .service-img { width: 100%; max-width: 180px; height: auto; margin-bottom: 15px; }
-        .image-container { margin-top: -130px; } /* Se redujo el espacio entre la imagen y el encabezado */
+        .image-container { margin-top: -130px; }
     </style>
 </head>
 <body>
@@ -44,13 +42,7 @@
         </div>
     </nav>
     
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>SILVA Y ABOGADOS</h1>
-        <p>Estudio de abogados</p>
-    </section>
-    
-    <!-- Imagen Adicional con menor espacio -->
+    <!-- Imagen Principal -->
     <section class="container text-center my-4 image-container">
         <img src="https://github.com/sebastiansilva19/COORPORACION-PERUANA-DE-ABOGADOS/blob/main/imagen%20tit.png?raw=true" class="img-fluid" alt="Imagen Titular">
     </section>
